--- a/devops/deployment.yaml
+++ b/devops/deployment.yaml
@@ -1,4 +1,3 @@
-# MongoDB remains unchanged
 apiVersion: v1
 kind: Service
 metadata:
@@ -38,32 +37,34 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Flask-Mongodb-Test-Project
+  name: flask-mongodb-test-project
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Flask-Mongodb-Test-Project
+      app: flask-mongodb-test-project
   template:
     metadata:
       labels:
-        app: Flask-Mongodb-Test-Project
+        app: flask-mongodb-test-project
     spec:
       containers:
-        - name: Flask-Mongodb-Test-Project
-          image: iyedhosni20/Flask-Mongodb-Test-Project:latest
+        - name: flask-mongodb-test-project
+          image: iyedhosni20/flask-mongodb-test-project:latest
           ports:
             - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: Flask-Mongodb-Test-Project-service
+  name: flask-mongodb-test-project-service
 spec:
   selector:
-    app: Flask-Mongodb-Test-Project
+    app: flask-mongodb-test-project
   ports:
     - port: 5000
       targetPort: 5000
-      nodePort: 31701
+      # Option 1: Let Kubernetes auto-assign a nodePort
+      # Remove the line below if you don't need a fixed port
+      nodePort: 31711
   type: NodePort
